--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="/style/style.css"><!--import css dari folder /public/style-->
         <title>About me</title>
 </head>
 
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col text-center">
                     <!--Root nya di folder public/-->
-                    <img class="img-thumbnail py-3" src="/img/me.jpg" alt="Irvan Hardyanto">
+                    <img class="img-thumbnail py-3" src="/img/me.jpg" alt="Irvan Hardyanto"><!--import gambar dari folder /public/img-->
                     <h1>Irvan Hardyanto</h1>
                     <p>Student</p>
                 </div>
